jlamontSC-test/src/objects/Control_Total__c.object
<CustomObject>
    <description>Store metric values to compare Salesforce data with data in external systems</description>
    <fields>
        <fullName>Captured_Date__c</fullName>
        <description>Date the value was captured.</description>
        <inlineHelpText>Date the value was captured.</inlineHelpText>
        <label>Captured Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <description>The metric being tracked.</description>
        <inlineHelpText>The metric being tracked.</inlineHelpText>
        <label>Metric</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Household Accounts</fullName>
                </value>
                <value>
                    <fullName>Organization Accounts</fullName>
                </value>
                <value>
                    <fullName>Leaderships</fullName>
                </value>
                <value>
                    <fullName>Memberships</fullName>
                </value>
                <value>
                    <fullName>Opportunities Count</fullName>
                </value>
                <value>
                    <fullName>Opportunities Total</fullName>
                </value>
                <value>
                    <fullName>Reservations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_ID__c</fullName>
        <description>Stores the Club Process ID</description>
        <label>Process ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <description>Which system do the values come from?</description>
        <inlineHelpText>Which system do the values come from?</inlineHelpText>
        <label>System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Club</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                    <default>true</default>
                    <label>Salesforce</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Currency__c</fullName>
        <label>Value (Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_Number__c</fullName>
        <description>The count/value of the metric</description>
        <inlineHelpText>The count/value of the metric</inlineHelpText>
        <label>Value (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Control Total</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Captured_Date__c</columns>
        <columns>System__c</columns>
        <columns>Metric__c</columns>
        <columns>Value_Number__c</columns>
        <columns>Value_Currency__c</columns>
        <columns>Process_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CT-{000000000}</displayFormat>
        <label>Control Total ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Control Totals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>